--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "AnsPress",
-  "version": "2.0.0-beta",
+  "version": "2.1.4",
   "description": "Question And answer plugin for WordPress",
   "main": "Gruntfile.js",
   "private": true,
