--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jshint": "",
-    "grunt-contrib-uglify": "",
     "grunt-contrib-less": "",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-csscomb": "",
     "grunt-phpdocumentor": "^0.4.1",
     "grunt-phplint": "",
     "grunt-pot": "^0.2.1",
+    "grunt-replace": "",
     "grunt-wp-i18n": "",
     "load-grunt-tasks": "",
-    "time-grunt": "",
-    "grunt-replace": ""
+    "time-grunt": ""
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
