- Bug fix - Do not activate AnsPress if extensions are not updated.
git-svn-id: https://plugins.svn.wordpress.org/anspress-question-answer/trunk@1166334 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,6 @@
     "description": "Question and answer plugin for WordPress",
     "license": "GPL-3.0+",
     "require": {
-        "google/recaptcha": "~1.1",
-        "dsawardekar/imgur-api": "dev-master"
+        "google/recaptcha": "~1.1"
     }
 }
